# gist

./: crawler.py  extract_pdf.ipynb  get_cctv.py  get_wind_data.py  gistfile1.txt  pyproject.toml  stock_study.ipynb
.ipynb_checkpoints/: stock_study-checkpoint.ipynb
