[tool.poetry]
name = "basic_analysis"
version = "0.1.0"
description = ""
authors = ["rbsli <rbslixiang@163.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.0.0"
pandas = "^1.0.0"
openpyxl = "^3.0.9"
seaborn = "^0.11.2"
plotly = "^5.3.1"
plotly-express = "^0.4.1"
jupyter-dash = "^0.4.0"
scipy = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[install]
trusted-host = "mirrors.aliyun.com"