[tool.poetry]
name = "basic_analysis"
version = "0.1.0"
description = ""
authors = ["rbsli <rbslixiang@163.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.poetry.source]]
name = 'pypi_'
url = 'https://pypi.org/simple/'
default = false

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.0.0"
pandas = "^1.0.0"
openpyxl = "^3.0.9"
seaborn = "^0.11.2"
plotly = "^5.3.1"
plotly-express = "^0.4.1"
jupyter-dash = "^0.4.0"
scipy = "^1.0.0"
kaleido = {url = "https://github.com/plotly/Kaleido/releases/download/v0.2.1/kaleido-0.2.1-py2.py3-none-win_amd64.whl"}
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[install]
trusted-host = "mirrors.aliyun.com"